--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-Pillow
-argparse
-base64
-concurrent.futures
-tqdm
-hashlib
-chardet
-os
-threading
-logging
-stegano
-cryptography
-json
+pillow==10.2.0
+tqdm==4.67.0
+chardet==5.2.0
+stegano==0.11.5
+cryptography==43.0.3
